# BufferStream

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: BufferStream.h  FileStream.h
src/: BufferStream.cpp
test/: BufferStream.cpp
